# claudian-qt

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CTestTestfile.cmake  README.md
.claude/: settings.json
.claude/hooks/: list-skills.sh
.claude/skills/test-coverage/: SKILL.md
.context/retros/: 2026-05-15-1.json  2026-05-15-2.json
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-signal-extension/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.superpowers/brainstorm/29649-1778341709/content/: image-support-ui.html
bridge/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
bridge/src/: attachment-store.ts  daemon.ts  index.ts  message-input.ts  protocol.ts  session-history.ts
bridge/tests/: agent-sdk-parity.test.ts  ask-user-question.test.ts  attachment-store.test.ts  bridge.test.ts  c2-knowledge.test.ts  c3-artifacts.test.ts  daemon.test.ts  export.test.ts  message-input.test.ts  session-history.test.ts  session-sdk.test.ts
bridge/tests/coverage/raw/: coverage-93480-1778921717842-0.json  coverage-93681-1778921725933-0.json  coverage-93704-1778921725899-0.json
bridge/tests/frontend/: chat-copy.test.ts  chat-draft.test.ts  chat-format.test.ts  chat-nav.test.ts  chat-scroll.test.ts
claudian/: data.json
docs/superpowers/plans/: 2026-05-09-image-support.md  2026-05-09-persistent-daemon-bridge.md  2026-05-09-streaming-ux.md  2026-05-09-typescript-agent-sdk-bridge.md  2026-05-10-ace-statusline.md  2026-05-10-copy-all-tool-results.md  2026-05-10-copy-message.md  2026-05-10-draft-persistence.md  2026-05-10-keyboard-shortcuts.md  2026-05-10-permission-improvements.md  2026-05-10-sdk-events.md  2026-05-10-session-rename.md  2026-05-10-smart-auto-scroll-toast.md  2026-05-14-agent-sdk-feature-parity.md  sprint-1-tier-1-2-3.md  sprint-2-tier-a-b-c.md
docs/superpowers/specs/: 2026-05-09-image-support-design.md  2026-05-10-ace-statusline-design.md
resources/: resources.qrc
resources/chat/: chat-copy.js  chat-draft.js  chat-format.js  chat-nav.js  chat-scroll.js  chat.css  chat.js  index.html  obsidian-shim.js
resources/claudian/: data.json
resources/icons/: ClaudianQt.icns
scripts/: build.sh  deploy.sh  generate-icns.sh
src/: attachmentstore.cpp  attachmentstore.h  bridgedaemon.cpp  bridgedaemon.h  claudebridge.cpp  claudebridge.h  claudeprocess.cpp  claudeprocess.h  main.cpp  mainwindow.cpp  mainwindow.h
